<resources>
    <string name="app_name">EventMatchmaker</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="age_limit">Age Limit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_event">Add Event</string>
    <string name="log_out">Log Out</string>
    <string name="calender">Calender</string>
    <string name="next">Next</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="about_container">About</string>
    <string name="about">About Event</string>
    <string name="age_container">Age Restriction</string>
    <string name="dress_code_container">Dress Code</string>
    <string name="dress_code">Event Dress Code</string>
    <string name="event_age">Event Age Restriction</string>
    <string name="number">0</string>
    <string name="seats_container">Seats</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="paid_event">Paid Event</string>
    <string name="event_price_container" />
    <string name="event_paid_container">Price</string>
    <string name="filters">Filters</string>
    <string name="interested_in">Interested in</string>
    <string name="event_category">Category</string>
    <string name="distance">Distance</string>
    <string name="number_km">0km</string>
    <string name="max_price">Max Price</string>
    <string name="number_price">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="user_location">User Location</string>
    <string name="hello">Hello, Via707!</string>
    <string name="home_desc">What event would you like to go?</string>
    <string name="popular_event">Popular Event</string>
    <string name="recommended">Recommended For You</string>
    <string name="find_event">Find Event</string>
    <string name="more">More</string>
    <string name="this_weekend">Events</string>
    <string name="not_account">Not have an account? Sign Up</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="namevent">Name Event</string>
    <string name="groupchat">Group Chat</string>
    <string name="your_message">Your message</string>
    <string name="skip">Skip</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="preferences_desc">Select a few of your preferenced event category</string>
    <string name="option">Option</string>
    <string name="title_activity_camera">CameraActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="welcome">Welcome,</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="message_welcome_page">A place to connect Bangkit 2023 cohorts</string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="title_signup_page">Make an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login to explore!</string>
    <string name="title_login_page">Are you ready?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome to StoryApp</string>
    <string name="empty_image_warning">Empty Image Warning</string>
    <string name="appwidget_text">STORY APP BANNER</string>
    <string name="empty_text">Empty Text</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_fill_first">FILL IT IN FIRST</string>
    <string name="add_description">Add description…</string>
    <string name="upload">UPLOAD</string>
    <string name="description">Description</string>
    <string name="toast_upload_failed">Failed to upload your story</string>
    <string name="userWelcome">"Hello, "</string>
    <string name="toastNavigateError">There\'s something wrong with navigating</string>
    <string name="permissionGranted">Permission request granted</string>
    <string name="permissionDenied">Permission request denied</string>
    <string name="dialogRegisterSuccess">Registration Success</string>
    <string name="oke">OKE</string>
    <string name="dialogRegisterFailed">Registration Failed</string>
    <string name="dialogLoginFailed">Login Failed</string>
    <string name="takePictureFailed">Take Picture Failed</string>
    <string name="showCameraFailed">Show Camera Failed</string>
    <string name="weakPassword">Your password is too weak</string>
    <string name="unValidEmail">Input valid email</string>
    <string name="nameTooLong">Your name is too long</string>
    <string name="mainFabLogout">Button for logout</string>
    <string name="mainFabAdd">Button for add story</string>
    <string name="storyPictureDisplay">Story image display</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="addLocation">Add my location</string>
    <string name="noImageSelected">No image selected</string>
    <string name="autoFillHints">This is my story description</string>
    <string name="conDesStoryCameraButton">Button for taking picture from camera</string>
    <string name="conDesStoryGalleryButton">Button for</string>
    <string name="conDesStoryPictureDisplay">Picked Picture Display</string>
    <string name="conDesSwitchCameraButton">Button for switching the camera</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="isEventOffline">Offline Event</string>
    <string name="chooseImage">Choose Image</string>
    <string name="chooseTime">Choose Time</string>
    <string name="rangeTime">00:00</string>
    <string name="strip">-</string>
    <string name="event_start_date">Event Start Date</string>
    <string name="min_price">Min Price</string>
    <string name="searchContainer">I am looking for...</string>
    <string name="event_organizer">Event Organizer</string>
    <string name="event_organizer_container">Organizer</string>
    <string name="currency">Rp</string>
    <string name="my_chat">I am on my way! I am going with Emily so I’ll drop at her place first. See you guys later!</string>
    <string name="other_chat">Where are you guys?</string>
    <string name="group_chat_name">Group Chat Name</string>

    <string-array name="category_array">
        <item>adventure</item>
        <item>creativity</item>
        <item>sports</item>
        <item>concert</item>
        <item>shopping</item>
        <item>learning</item>
    </string-array>
</resources>