<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.activity.FiltersActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvInterestedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interested_in"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <Spinner
        android:id="@+id/spEventCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/outlined_background"
        android:paddingVertical="16dp"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="28dp"
        android:hint="@string/event_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInterestedIn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_category"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/spEventCategory"
        app:layout_constraintBottom_toTopOf="@id/spEventCategory"
        app:layout_constraintStart_toStartOf="@id/spEventCategory"/>

    <EditText
        android:id="@+id/etAgeLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_limit"
        android:background="@drawable/outlined_background"
        android:paddingVertical="16dp"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spEventCategory"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_limit"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/etAgeLimit"
        app:layout_constraintBottom_toTopOf="@id/etAgeLimit"
        app:layout_constraintStart_toStartOf="@id/etAgeLimit"/>

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_start_date"
        android:drawableStart="@drawable/ic_calender"
        android:drawablePadding="16dp"
        android:paddingVertical="16dp"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="28dp"
        android:background="@drawable/outlined_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAgeLimit"/>

    <RelativeLayout
        android:id="@+id/rlDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etStartDate">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/min_price"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/tvMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_price"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/slDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlDistance"/>

    <RelativeLayout
        android:id="@+id/rlMaxPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slDistance">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/max_price"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/tvMaxPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_price"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/slMaxPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlMaxPrice"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="32dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>