<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:src="@drawable/pic_i"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivProfile"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    app:layout_constraintStart_toEndOf="@id/ivProfile"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/tvUserLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_location"
                    app:layout_constraintStart_toEndOf="@id/ivProfile"
                    app:layout_constraintTop_toTopOf="parent"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            app:layout_constraintTop_toBottomOf="@id/clHeader"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_desc"
            app:layout_constraintTop_toBottomOf="@id/tvHello"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.SearchView
            android:id="@+id/svHomeSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tvPopularEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_event"
            app:layout_constraintTop_toBottomOf="@id/svHomeSearch"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:id="@+id/ivPopularEvent"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/pic_i"
            app:layout_constraintTop_toBottomOf="@id/tvPopularEvent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tvRecommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommended"
            app:layout_constraintTop_toBottomOf="@id/ivPopularEvent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvRecommended" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item_event"
            app:layout_constraintTop_toBottomOf="@id/tvRecommended"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvThisWeekend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_weekend"
            app:layout_constraintTop_toBottomOf="@id/rcitem"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvThisWeekend" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item_event"
            app:layout_constraintTop_toBottomOf="@id/tvMore"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>