<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.activity.GroupChatActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="62dp"
        android:layout_marginTop="16dp"
        android:padding="2dp"
        android:src="@drawable/animepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/shape_circle"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tvNameEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namevent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPicture"/>

    <TextView
        android:id="@+id/tvGroupChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groupchat"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameEvent"/>

    <RelativeLayout
        android:id="@+id/rlKeyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/outlined_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivVoice">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_message"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/ivMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_stickers"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:padding="8dp"
        app:tint="@color/white"
        android:src="@drawable/ic_voice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvOtherChatUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llOtherChat"/>

    <LinearLayout
        android:id="@+id/llOtherChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/radius_other_chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvMyChatUsername">

        <TextView
            android:id="@+id/tvOtherChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/other_chat"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvMyChatUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llMyChat"/>

    <LinearLayout
        android:id="@+id/llMyChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="32dp"
        android:background="@drawable/radius_my_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rlKeyboard">

        <TextView
            android:id="@+id/tvMyChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/my_chat"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>